[gd_scene load_steps=8 format=3 uid="uid://d3nh81q7dsdr4"]

[ext_resource type="Theme" uid="uid://c8ysyp3qs4xu8" path="res://Assets/Themes/SpaceOpera.tres" id="1_55pmi"]
[ext_resource type="Script" uid="uid://byxtn4120rsnl" path="res://Controller/controller.gd" id="1_u2oln"]
[ext_resource type="Resource" uid="uid://bun1tceqw2x5k" path="res://Data/SCENE_STRUCTURE.tres" id="2_7hav4"]
[ext_resource type="Script" uid="uid://bid2eudkrel8k" path="res://xArchive/OctoberPlaytest/timer_billboard.gd" id="3_u2oln"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_m55xu"]
size = Vector2(200, 200)

[sub_resource type="ViewportTexture" id="ViewportTexture_nlu3g"]
viewport_path = NodePath("Circle")

[sub_resource type="ViewportTexture" id="ViewportTexture_671od"]
viewport_path = NodePath("Pews")

[node name="Control" type="Control"]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 0
offset_top = 36.0
offset_right = 1920.0
offset_bottom = 1116.0
theme = ExtResource("1_55pmi")
script = ExtResource("1_u2oln")
structure = ExtResource("2_7hav4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_55pmi")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Main" type="VSplitContainer" parent="MarginContainer"]
layout_mode = 2
split_offset = -200

[node name="Header" type="HBoxContainer" parent="MarginContainer/Main"]
layout_mode = 2
size_flags_vertical = 2

[node name="Time" type="Label" parent="MarginContainer/Main/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "TIME"

[node name="TimeLabel" type="Label" parent="MarginContainer/Main/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "0000"
script = ExtResource("3_u2oln")

[node name="Previews" type="HBoxContainer" parent="MarginContainer/Main/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CSTAGED" type="TextureRect" parent="MarginContainer/Main/Header/Previews"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = SubResource("PlaceholderTexture2D_m55xu")

[node name="PSTAGED" type="TextureRect" parent="MarginContainer/Main/Header/Previews"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = SubResource("PlaceholderTexture2D_m55xu")

[node name="CLIVE" type="TextureRect" parent="MarginContainer/Main/Header/Previews"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = SubResource("ViewportTexture_nlu3g")
expand_mode = 3

[node name="PLIVE" type="TextureRect" parent="MarginContainer/Main/Header/Previews"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = SubResource("ViewportTexture_671od")
expand_mode = 3

[node name="Body" type="HSplitContainer" parent="MarginContainer/Main"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200

[node name="SideBar" type="VBoxContainer" parent="MarginContainer/Main/Body"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Main/Body/SideBar"]
layout_mode = 2
text = "Scenes"

[node name="DatapadSync" type="CheckButton" parent="MarginContainer/Main/Body/SideBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
button_pressed = true
text = "Datapad Sync"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Main/Body/SideBar"]
layout_mode = 2
size_flags_vertical = 3

[node name="SceneControl" type="VBoxContainer" parent="MarginContainer/Main/Body/SideBar/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProjectorControl" type="VBoxContainer" parent="MarginContainer/Main/Body/SideBar"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Main/Body/SideBar/ProjectorControl"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Projectors"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main/Body"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Main/Body/VBoxContainer"]
layout_mode = 2

[node name="MakeUnique" type="Button" parent="MarginContainer/Main/Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Make Unique..."

[node name="Open" type="Button" parent="MarginContainer/Main/Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Open in Editor..."

[node name="Button3" type="Button" parent="MarginContainer/Main/Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "asdfgasfga"

[node name="Button4" type="Button" parent="MarginContainer/Main/Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "asdfgasfga"

[node name="ActiveSceneControls" type="PanelContainer" parent="MarginContainer/Main/Body/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Autosave" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="toggled" from="MarginContainer/Main/Body/SideBar/DatapadSync" to="." method="_on_datapad_sync_toggled"]
[connection signal="pressed" from="MarginContainer/Main/Body/VBoxContainer/HBoxContainer/MakeUnique" to="." method="_on_make_unique_pressed"]
[connection signal="pressed" from="MarginContainer/Main/Body/VBoxContainer/HBoxContainer/Open" to="." method="_on_open_pressed"]
[connection signal="timeout" from="Autosave" to="." method="_on_autosave_timeout"]
